--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "modular",
     "productivity"
   ],
-  "repository": "https://github.com/popodok/catuserbot/",
+  "repository": "https://github.com/popodok/Catuserbot-1/",
   "website": "#TODO",
   "success_url": "#TODO",
   "env": {
